@@ -5,6 +5,7 @@
     * 5518 FIX: win.mem: Fix incorrect representation of absolute memory levels in graphs...
     * 5548 FIX: zpool_status: Fixed crash if pool has been deleted or vanished...
     * 5549 FIX: mk_oracle.ps1: Fixed scattered information for configuration...
+    * 5550 FIX: mk_oracle.ps1: Fixed exceptions because of useless backslashes...
     * 5451 FIX: logwatch: Fixed reclassifying mechanism: Patterns did not apply correctly if they have changed
     * 5417 FIX: Windows: allow whitespace in eventlog event source...
 
